slider became adaptive

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 
             <section class="section slider-bg">
                 <div class="container slider">
+
                     <div class="slider__left">
                         <div class="arrow arrow__left">
                             <a href="#" class="arrow__link">
@@ -157,14 +158,17 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="slider__main">
-                        <div class="slider__composition">
+
+                        <a href="#" class="slider__button"><div class="slider__composition">
                             <div class="slider__burger">
                                 <svg class="slider__burgericon">
                                     <use xlink:href="CSS/sprite/sprite.svg#burger"/>
                                 </svg>
                             </div>
-                        </div>
+                        </div></a>
+
                         <div class="slider__kcal">
                             <div class="slider__kettlebell">
                                 <svg class="slider__kcalicon">
