error with slider-image fixed

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
 
                         <div class="slider__image">
-                            <img src="IMG3/black.png" alt="Бургер с чернилами" class="slider__img">
+                            <img src="IMG3/Black.png" alt="Бургер с чернилами" class="slider__img">
                         </div>
 
                         <div class="slider__content">
