working accordeon in team js

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                         </div>
                                     </li>
                                     <li class="teammates__item">
-                                        <a href="#" class="teammates__trigger teammates__trigger_active">
+                                        <a href="#" class="teammates__trigger">
                                             <h5 class="teammates__name">Ричард Джеймс</h5>
                                         </a>
                                         <div class="teammates__desc">
@@ -609,5 +609,6 @@
 
     <script src="Scripts/greeting-fullsizeMenu.js"></script>
     <script src="Scripts/slider-products.js"></script>
+    <script src="Scripts/team-accordeon.js"></script>
 </body>
 </html>
