acoordeon menu js + accordeon team jq

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="stylesheet"  href="CSS/main.css">
+    <script src="Scripts/jquery.min.js"></script>
     <script src="Scripts/svg4everybody.js"></script>
   <script>
     svg4everybody();
@@ -368,7 +369,7 @@
                                 </div>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__trigger  menu__trigger_active">
+                                <a href="#" class="menu__trigger">
                                 <div class="menu__namebg menu__namebg_vegans">
                                     <h3 class="menu__name">Вегетарианское</h3>
                                 </div>
@@ -610,5 +611,6 @@
     <script src="Scripts/greeting-fullsizeMenu.js"></script>
     <script src="Scripts/slider-products.js"></script>
     <script src="Scripts/team-accordeon.js"></script>
+    <script src="Scripts/menu-accordeon.js"></script>
 </body>
 </html>
