--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="stylesheet"  href="CSS/main.css">
-    <script src="Scripts/jquery.min.js"></script>
+    <script src="Scripts/jquery-3.2.1.min.js"></script>
     <script src="Scripts/svg4everybody.js"></script>
   <script>
     svg4everybody();
@@ -485,6 +485,20 @@
                     </div>
                     
                 </div>
+
+                <div class="modal-bg">
+                    <div class="modal">
+                        <div class="modal__content">
+                            <h5 class="modal__title">Константин Спилберг</h5>
+                            <div class="modal__text">
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            </div>
+                        </div>
+                        <div class="modal__close">
+                                <a href="#" class="close__link close__link_slider" id="modal__close"><img src="IMG3/slider-close.svg" alt="close"></a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section class="order section">
@@ -605,6 +619,7 @@
                     <li class="dots__item"><a href="#"></a></li>
                 </ul>
             </aside>
+
         </div>
     </div>
 
@@ -612,5 +627,6 @@
     <script src="Scripts/slider-products.js"></script>
     <script src="Scripts/team-accordeon.js"></script>
     <script src="Scripts/menu-accordeon.js"></script>
+    <script src="Scripts/feedback-modal.js"></script>
 </body>
 </html>
