team and menu acco with animation

--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@
                                         <a href="#" class="teammates__trigger">
                                             <h5 class="teammates__name">Дэниэл Редклиф</h5>
                                         </a>
-                                        <div class="teammates__desc">
-                                            <div class="teammates__foto"> <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__teampic"></div>
-                                            <div class="teammates__text">
-                                                <h6 class="teammates__job">Оператор </h6>
-                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                        <div class="teammates__container">
+                                            <div class="teammates__desc">
+                                                <div class="teammates__foto"> <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__teampic"></div>
+                                                <div class="teammates__text">
+                                                    <h6 class="teammates__job">Оператор </h6>
+                                                    <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
@@ -312,11 +314,13 @@
                                         <a href="#" class="teammates__trigger">
                                             <h5 class="teammates__name">Ричард Джеймс</h5>
                                         </a>
-                                        <div class="teammates__desc">
-                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
-                                            <div class="teammates__text">
-                                                <h6 class="teammates__job">Оператор </h6>
-                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                        <div class="teammates__container">
+                                            <div class="teammates__desc">
+                                                <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                                <div class="teammates__text">
+                                                    <h6 class="teammates__job">Оператор </h6>
+                                                    <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
@@ -324,11 +328,13 @@
                                         <a href="#" class="teammates__trigger">
                                             <h5 class="teammates__name">Джейк Финн</h5>
                                         </a>
-                                        <div class="teammates__desc">
-                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
-                                            <div class="teammates__text">
-                                                <h6 class="teammates__job">Оператор </h6>
-                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                        <div class="teammates__container">
+                                            <div class="teammates__desc">
+                                                <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                                <div class="teammates__text">
+                                                    <h6 class="teammates__job">Оператор </h6>
+                                                    <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
@@ -336,11 +342,13 @@
                                         <a href="#" class="teammates__trigger">
                                             <h5 class="teammates__name">Николай Иванов</h5>
                                         </a>
-                                        <div class="teammates__desc">
-                                            <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
-                                            <div class="teammates__text">
-                                                <h6 class="teammates__job">Оператор </h6>
-                                                <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                        <div class="teammates__container">
+                                            <div class="teammates__desc">
+                                                <img src="IMG4/teampic.png" alt="Ричард Джеймс" class="teammates__foto">
+                                                <div class="teammates__text">
+                                                    <h6 class="teammates__job">Оператор </h6>
+                                                    <p>С радостью поможет подобрать идеальный бургер и оформить заказ.</p> 
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
@@ -359,33 +367,39 @@
                     <div class="menu__accordeon">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="#" class="menu__trigger">
+                                <a href="#" class="menu__trigger 1">
                                 <div class="menu__namebg menu__namebg_meateaters">
                                     <h3 class="menu__name ">Для мясоедов</h3>
                                 </div>
                                 </a>
-                                <div class="menu__desc">
-                                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                <div class="menu__container 1">
+                                    <div class="menu__desc 1">
+                                        <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                    </div>
                                 </div>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__trigger">
+                                <a href="#" class="menu__trigger 2">
                                 <div class="menu__namebg menu__namebg_vegans">
                                     <h3 class="menu__name">Вегетарианское</h3>
                                 </div>
                                 </a>
-                                <div class="menu__desc">
-                                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                <div class="menu__container 2">
+                                    <div class="menu__desc 2">
+                                        <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                    </div>
                                 </div>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__trigger">
+                                <a href="#" class="menu__trigger 3">
                                     <div class="menu__namebg menu__namebg_diet">
                                     <h3 class="menu__name">Диетическое</h3>
                                     </div>
                                 </a>
-                                <div class="menu__desc">
-                                    <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                <div class="menu__container 3">
+                                    <div class="menu__desc 3">
+                                        <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову</p>
+                                    </div>
                                 </div>
                             </li>
                         </ul>
