mobile test w/out ops

--- a/index.html
+++ b/index.html
@@ -1121,8 +1121,8 @@
     </div>
 
     <script src="Scripts/jquery-3.2.1.min.js"></script>
-    <script src="onepagescroll/jquery.onepage-scroll.min.js"></script>
-    <script src="onepagescroll/onepagescroll-setup.js"></script>
+    <!-- <script src="onepagescroll/jquery.onepage-scroll.min.js"></script> -->
+    <!-- <script src="onepagescroll/onepagescroll-setup.js"></script> -->
 
 
     <script src="Scripts/greeting-fullsizeMenu.js"></script>
