mobile test w/out ops 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link rel="stylesheet" type="text/css" href="onepagescroll/onepage-scroll.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="onepagescroll/onepage-scroll.css"/> -->
     <link rel="stylesheet"  href="CSS/main.css">
 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
